// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays data 1`] = `
<div>
  <div
    class="sc-bdVaJa iPUEme"
  >
    <div
      class="sc-bwzfXH sc-htpNat hDapZZ"
    >
      Id
    </div>
    <div
      class="sc-bwzfXH sc-htpNat hDapZZ"
    >
      Name
    </div>
    <div
      class="sc-bwzfXH hdkBNF"
    >
      1
    </div>
    <div
      class="sc-bwzfXH hdkBNF"
    >
      Alice
    </div>
    <div
      class="sc-bwzfXH hdkBNF"
    >
      2
    </div>
    <div
      class="sc-bwzfXH hdkBNF"
    >
      Bob
    </div>
    <div
      class="sc-bwzfXH hdkBNF"
    >
      3
    </div>
    <div
      class="sc-bwzfXH hdkBNF"
    >
      Charlie
    </div>
  </div>
</div>
`;

exports[`displays no data 1`] = `
<div>
  <div
    class="sc-bdVaJa iPUEme"
  >
    <div
      class="sc-bwzfXH sc-htpNat hDapZZ"
    >
      Id
    </div>
    <div
      class="sc-bwzfXH sc-htpNat hDapZZ"
    >
      Name
    </div>
  </div>
</div>
`;
